Combines fs read stream with filtered through stream

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Coding exercise to read and filter a list of customers with coords to matching proximity criteria ",
   "main": "index.js",
   "scripts": {
-    "test": "karma start karma.conf.js"
+    "test": "karma start karma.conf.js",
+    "pretest-ci": "npm install",
+    "test-ci": "karma start karma.conf.js --browsers PhantomJS --single-run"
   },
   "repository": {
     "type": "git",
@@ -29,5 +31,12 @@
     "karma-cli": "^0.1.1",
     "karma-commonjs": "0.0.13",
     "karma-jasmine": "^0.3.6"
+  },
+  "dependencies": {
+    "fs": "0.0.2",
+    "geo-distance-safe": "^0.1.2",
+    "split": "^1.0.0",
+    "stream-combiner": "^0.2.2",
+    "through2-filter": "^2.0.0"
   }
 }
