--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Coding exercise to read and filter a list of customers with coords to matching proximity criteria ",
   "main": "index.js",
   "scripts": {
-    "test": "tape test/index.js",
+    "test": "tape test/*.js",
     "pretest-ci": "npm install",
     "test-ci": "karma start karma.conf.js --browsers PhantomJS --single-run"
   },
