--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "Coding exercise to read and filter a list of customers with coords to matching proximity criteria ",
   "main": "index.js",
   "scripts": {
-    "test": "tape test/*.js",
-    "pretest-ci": "npm install",
-    "test-ci": "karma start karma.conf.js --browsers PhantomJS --single-run"
+    "test": "tape test/*.js"
   },
   "repository": {
     "type": "git",
@@ -36,5 +34,8 @@
     "split": "^1.0.0",
     "stream-combiner": "^0.2.2",
     "through2-filter": "^2.0.0"
+  },
+  "engines": {
+    "node" : ">=4.0.0"
   }
 }
